--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image"  />
+    <link rel="icon" type="image" href="./src/img/SoftWash.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>softwash</title>
+    <title>Soft Wash</title>
   </head>
   <body>
     <div id="root"></div>
