errores en los formularios arreglados, restan validaciones

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="./src/img/SoftWash.jpg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-rf0Hox4zLz80WpI8S3s/PYUdRZVqVQmWof/Csk2L2sxf92qoBOeSNrM+6Pfg2N7l" crossorigin="anonymous">
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+  crossorigin="anonymous"
+/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soft Wash</title>
   </head>
